@@ -180,11 +180,11 @@ expr_stmt|;
 block|}
 block|}
 comment|/** Confirms whether or not the given {@link TwoPhaseIterator}    *  matches on the current document. */
-DECL|method|matches
+DECL|method|matchesOrNull
 specifier|private
 specifier|static
 name|boolean
-name|matches
+name|matchesOrNull
 parameter_list|(
 name|TwoPhaseIterator
 name|it
@@ -203,56 +203,6 @@ name|matches
 argument_list|()
 return|;
 block|}
-comment|/** Confirm whether there is a match given the current positions of the    *  req and excl approximations. This method has 2 important properties:    *   - it only calls matches() on excl if the excl approximation is on    *     the same doc ID as the req approximation    *   - it does NOT call matches() on req if the excl approximation is exact    *     and is on the same doc ID as the req approximation */
-DECL|method|matches
-specifier|private
-specifier|static
-name|boolean
-name|matches
-parameter_list|(
-name|int
-name|doc
-parameter_list|,
-name|int
-name|exclDoc
-parameter_list|,
-name|TwoPhaseIterator
-name|reqTwoPhaseIterator
-parameter_list|,
-name|TwoPhaseIterator
-name|exclTwoPhaseIterator
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-assert|assert
-name|exclDoc
-operator|>=
-name|doc
-assert|;
-if|if
-condition|(
-name|doc
-operator|==
-name|exclDoc
-operator|&&
-name|matches
-argument_list|(
-name|exclTwoPhaseIterator
-argument_list|)
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
-return|return
-name|matches
-argument_list|(
-name|reqTwoPhaseIterator
-argument_list|)
-return|;
-block|}
 annotation|@
 name|Override
 DECL|method|iterator
@@ -262,161 +212,13 @@ name|iterator
 parameter_list|()
 block|{
 return|return
-operator|new
-name|DocIdSetIterator
-argument_list|()
-block|{
-comment|/** Advance to the next non-excluded doc. */
-specifier|private
-name|int
-name|toNonExcluded
-parameter_list|(
-name|int
-name|doc
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|int
-name|exclDoc
-init|=
-name|exclApproximation
+name|TwoPhaseIterator
 operator|.
-name|docID
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-init|;
-condition|;
-name|doc
-operator|=
-name|reqApproximation
-operator|.
-name|nextDoc
-argument_list|()
-control|)
-block|{
-if|if
-condition|(
-name|doc
-operator|==
-name|NO_MORE_DOCS
-condition|)
-block|{
-return|return
-name|NO_MORE_DOCS
-return|;
-block|}
-if|if
-condition|(
-name|exclDoc
-operator|<
-name|doc
-condition|)
-block|{
-name|exclDoc
-operator|=
-name|exclApproximation
-operator|.
-name|advance
+name|asDocIdSetIterator
 argument_list|(
-name|doc
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|matches
-argument_list|(
-name|doc
-argument_list|,
-name|exclDoc
-argument_list|,
-name|reqTwoPhaseIterator
-argument_list|,
-name|exclTwoPhaseIterator
-argument_list|)
-condition|)
-block|{
-return|return
-name|doc
-return|;
-block|}
-block|}
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|nextDoc
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-return|return
-name|toNonExcluded
-argument_list|(
-name|reqApproximation
-operator|.
-name|nextDoc
+name|twoPhaseIterator
 argument_list|()
 argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|advance
-parameter_list|(
-name|int
-name|target
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-return|return
-name|toNonExcluded
-argument_list|(
-name|reqApproximation
-operator|.
-name|advance
-argument_list|(
-name|target
-argument_list|)
-argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|int
-name|docID
-parameter_list|()
-block|{
-return|return
-name|reqApproximation
-operator|.
-name|docID
-argument_list|()
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|long
-name|cost
-parameter_list|()
-block|{
-return|return
-name|reqApproximation
-operator|.
-name|cost
-argument_list|()
-return|;
-block|}
-block|}
 return|;
 block|}
 annotation|@
@@ -495,6 +297,152 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+comment|/**    * Estimation of the number of operations required to call DISI.advance.    * This is likely completely wrong, especially given that the cost of    * this method usually depends on how far you want to advance, but it's    * probably better than nothing.    */
+DECL|field|ADVANCE_COST
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|ADVANCE_COST
+init|=
+literal|10
+decl_stmt|;
+DECL|method|matchCost
+specifier|private
+specifier|static
+name|float
+name|matchCost
+parameter_list|(
+name|DocIdSetIterator
+name|reqApproximation
+parameter_list|,
+name|TwoPhaseIterator
+name|reqTwoPhaseIterator
+parameter_list|,
+name|DocIdSetIterator
+name|exclApproximation
+parameter_list|,
+name|TwoPhaseIterator
+name|exclTwoPhaseIterator
+parameter_list|)
+block|{
+name|float
+name|matchCost
+init|=
+literal|2
+decl_stmt|;
+comment|// we perform 2 comparisons to advance exclApproximation
+if|if
+condition|(
+name|reqTwoPhaseIterator
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// this two-phase iterator must always be matched
+name|matchCost
+operator|+=
+name|reqTwoPhaseIterator
+operator|.
+name|matchCost
+argument_list|()
+expr_stmt|;
+block|}
+comment|// match cost of the prohibited clause: we need to advance the approximation
+comment|// and match the two-phased iterator
+specifier|final
+name|float
+name|exclMatchCost
+init|=
+name|ADVANCE_COST
+operator|+
+operator|(
+name|exclTwoPhaseIterator
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+name|exclTwoPhaseIterator
+operator|.
+name|matchCost
+argument_list|()
+operator|)
+decl_stmt|;
+comment|// upper value for the ratio of documents that reqApproximation matches that
+comment|// exclApproximation also matches
+name|float
+name|ratio
+decl_stmt|;
+if|if
+condition|(
+name|reqApproximation
+operator|.
+name|cost
+argument_list|()
+operator|<=
+literal|0
+condition|)
+block|{
+name|ratio
+operator|=
+literal|1f
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|exclApproximation
+operator|.
+name|cost
+argument_list|()
+operator|<=
+literal|0
+condition|)
+block|{
+name|ratio
+operator|=
+literal|0f
+expr_stmt|;
+block|}
+else|else
+block|{
+name|ratio
+operator|=
+operator|(
+name|float
+operator|)
+name|Math
+operator|.
+name|min
+argument_list|(
+name|reqApproximation
+operator|.
+name|cost
+argument_list|()
+argument_list|,
+name|exclApproximation
+operator|.
+name|cost
+argument_list|()
+argument_list|)
+operator|/
+name|reqApproximation
+operator|.
+name|cost
+argument_list|()
+expr_stmt|;
+block|}
+name|matchCost
+operator|+=
+name|ratio
+operator|*
+name|exclMatchCost
+expr_stmt|;
+return|return
+name|matchCost
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|twoPhaseIterator
@@ -503,17 +451,45 @@ name|TwoPhaseIterator
 name|twoPhaseIterator
 parameter_list|()
 block|{
+specifier|final
+name|float
+name|matchCost
+init|=
+name|matchCost
+argument_list|(
+name|reqApproximation
+argument_list|,
+name|reqTwoPhaseIterator
+argument_list|,
+name|exclApproximation
+argument_list|,
+name|exclTwoPhaseIterator
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|reqTwoPhaseIterator
 operator|==
 literal|null
+operator|||
+operator|(
+name|exclTwoPhaseIterator
+operator|!=
+literal|null
+operator|&&
+name|reqTwoPhaseIterator
+operator|.
+name|matchCost
+argument_list|()
+operator|<=
+name|exclTwoPhaseIterator
+operator|.
+name|matchCost
+argument_list|()
+operator|)
 condition|)
 block|{
-return|return
-literal|null
-return|;
-block|}
+comment|// reqTwoPhaseIterator is LESS costly than exclTwoPhaseIterator, check it first
 return|return
 operator|new
 name|TwoPhaseIterator
@@ -565,17 +541,29 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-return|return
-name|ReqExclScorer
-operator|.
-name|matches
-argument_list|(
-name|doc
-argument_list|,
+if|if
+condition|(
 name|exclDoc
-argument_list|,
+operator|!=
+name|doc
+condition|)
+block|{
+return|return
+name|matchesOrNull
+argument_list|(
 name|reqTwoPhaseIterator
-argument_list|,
+argument_list|)
+return|;
+block|}
+return|return
+name|matchesOrNull
+argument_list|(
+name|reqTwoPhaseIterator
+argument_list|)
+operator|&&
+operator|!
+name|matchesOrNull
+argument_list|(
 name|exclTwoPhaseIterator
 argument_list|)
 return|;
@@ -588,15 +576,107 @@ name|matchCost
 parameter_list|()
 block|{
 return|return
-name|reqTwoPhaseIterator
-operator|.
 name|matchCost
+return|;
+block|}
+block|}
+return|;
+block|}
+else|else
+block|{
+comment|// reqTwoPhaseIterator is MORE costly than exclTwoPhaseIterator, check it first
+return|return
+operator|new
+name|TwoPhaseIterator
+argument_list|(
+name|reqApproximation
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|matches
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|int
+name|doc
+init|=
+name|reqApproximation
+operator|.
+name|docID
 argument_list|()
+decl_stmt|;
+comment|// check if the doc is not excluded
+name|int
+name|exclDoc
+init|=
+name|exclApproximation
+operator|.
+name|docID
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|exclDoc
+operator|<
+name|doc
+condition|)
+block|{
+name|exclDoc
+operator|=
+name|exclApproximation
+operator|.
+name|advance
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|exclDoc
+operator|!=
+name|doc
+condition|)
+block|{
+return|return
+name|matchesOrNull
+argument_list|(
+name|reqTwoPhaseIterator
+argument_list|)
 return|;
-comment|// TODO: also use cost of exclApproximation.advance()
+block|}
+return|return
+operator|!
+name|matchesOrNull
+argument_list|(
+name|exclTwoPhaseIterator
+argument_list|)
+operator|&&
+name|matchesOrNull
+argument_list|(
+name|reqTwoPhaseIterator
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|float
+name|matchCost
+parameter_list|()
+block|{
+return|return
+name|matchCost
+return|;
 block|}
 block|}
 return|;
+block|}
 block|}
 block|}
 end_class
